--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1> Hello! </h1>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Il Mio Portfolio</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Collega il tuo file CSS -->
+</head>
+<body>
+    <header>
+        <h1>Benvenuto al mio Portfolio</h1>
+    </header>
+    
+    <section>
+        <!-- Contenuto del sito -->
+    </section>
+
+    <footer>
+        <p>Copyright © 2024</p>
+    </footer>
+</body>
+</html>
