--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio Lorem Ipsum</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Collega il file CSS -->
     <style>
         /* Stile base per il layout e la responsività */
 
@@ -25,6 +24,11 @@
         header h1 {
             font-size: 3rem;
             margin: 0;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            color: #555;
         }
 
         /* Layout grid per la gallery */
