--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio Lorem Ipsum</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         /* Stile base per il layout e la responsività */
         body {
@@ -17,34 +18,32 @@
 
         /* Header */
         header {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
             text-align: center;
-            padding: 20px;
+            padding: 60px 20px;
+            background-color: #f4f4f4;
         }
 
         header h1 {
-            font-size: 3.5rem;
+            font-size: 3rem;
             margin: 0;
+            color: #333;
         }
 
         header p {
             font-size: 1.2rem;
-            max-width: 600px;
-            color: #555;
-            margin-top: 20px;
+            color: #666;
+            margin-top: 10px;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         /* Sezione Progetti/Immagini */
         .gallery {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 20px;
-            padding: 40px;
+            padding: 20px;
             max-width: 1200px;
             margin: 0 auto;
         }
@@ -91,7 +90,6 @@
                 height: 200px;
             }
         }
-
     </style>
 </head>
 <body>
