--- a/index.html
+++ b/index.html
@@ -1,119 +1,146 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio Lorem Ipsum</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        /* Stile base per il layout e la responsività */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            color: #333;
-        }
+Suyoung Yang
+suyoungy0601@gmail.com
+Instagram
+I’m a designer from Korea, based in Brooklyn, New York. I create visual identities for brands big and small, with a focus on typography and strategy. I graduated with a BFA in Design at the School of Visual Arts in 2019. Currently at Gretel, previously at ETC, Hinterland, and Chermayeff & Geismar & Haviv. My work has been recognized by the Type Director’s Club, Art Director’s Club, and Graphis. Feel free to reach out about freelance work, potential collaboration, or just to say hi ♥
+Mountain Hardwear
+A new identity for an outdoor wear brand, brought to life with an evolution of the logo, new art direction, brand color, and a custom typographic family, based on the iconic geometric elements of the Mountain Hardwear nut. Marrying the adventurous spirit and responsible craftsmanship of outdoor equipment, we anchored the brand personality in a dynamic tension between wild and wise.
+Design Team: Andrea-Trabucco Campos, Justin Au, Suyoung Yang, Zoe Lin, Cyrus Cumming (Motion)
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+Hija de Sanchez
+Visual identity for a group of contemporary taquerias based in Copenhagen, Denmark run by chef Rosio Sanchez. A modern and playful interpretation of Mexican street sign vernacular using a variable typeface paired with a colorful palette as a nod to the vibrant Mexican cuisine.
+Design Team: Flick Eriksson, Dylan Mulvaney, Suyoung Yang, Alaijah Hampton, Hailey Kim
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+Brooklyn Historical Society: 400 Years of Inequality
+For the entire month of October 2019, the Brooklyn Historical Society hosted panels, screenings, and events to reflect on the past four centuries of U.S. history and the persisting consequences of racial inequality since the arrival of slavery. The inequality symbol was a direct and literal identifier for the event, with the inverted colors alluding to the layers of the ramifications of slavery.
+Design Team: Geoff Halber, Kyle Blue, Suyoung Yang
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+Mode Analytics
+Brand identity for a data analytics company, capturing its independent spirit, technical sophistication and approachability. An analogous green palette paired with a variable typeface, and a constantly shifting graphic language of modular shapes allows Mode to quickly switch between exploratory to analytical expressions.
+Design Team: Simon Chong, Justin Au, Suyoung Yang, Yeni Kim, Cyrus Cumming (Motion)
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+Sightglass Coffee First Batch
+Logo and print ephemera for First Batch, a series by Sightglass Coffee that showcases the most extraordinary, single-origin coffees. First Batch brings rare, small lot coffee that is only available a few times a year through pre-order only.
+Design Team: Geoff Halber, Kyle Blue, Suyoung Yang
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+OluKai
+Brand identity for a Hawaiian-inspired footwear brand for the island lifestyle. The library of custom-drawn Kapa glyphs are the signature visual motifs that take inspiration from Hawaiian craftsmanship and storytelling.
+Design Team: Jesse Johanning, Suyoung Yang, Seohyun Cho, Alaijah Hampton (Motion)
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+Mysten Labs
+Brand identity for a research and deployment lab forging the path to a decentralized web by building breakthrough web3 technology for the next generation of builders. The line acts as a catalyst that activates and completes the framework, embodying Mysten Lab's mission to shape the next generation of the internet.
+Design Team: Andrea Trabucco-Campos, Flick Eriksson, Suyoung Yang, Kamber Jensen, John Choi (Motion)
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+Sacred & Profane
+A podcast on the effects of religion in our day to day lives, run by the Religion, Race, and Democracy Lab at the University of Virginia. The visual identity is rooted in the interconnectedness between the spiritual and the mundane in our every day lives.
+Design Team: Ben Schwartz, Geoff Halber, Kyle Blue, Suyoung Yang
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+Salsa Vega
+Packaging and identity for a Mexican table salsa inspired by a family recipe.
+Design Team: Suyoung Yang, Sohyun Park (Motion)
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+Finer Sounds
+*WORK IN PROGRESS* Visual identity for a record shop opening in Ace Hotel Brooklyn. Expected to be opened in Fall 2024.
+Design Team: Ryan Moore, Dylan Mulvaney, Suyoung Yang, John Choi (Motion)
+￼
+Omok & Mettowee Mint
+Custom typeface designs for personal and client projects
+Design Team:
+￼
+￼
+￼
+￼
+￼
+￼
+￼
+￼
 
-        /* Header */
-        header {
-            text-align: center;
-            padding: 60px 20px;
-            background-color: #f4f4f4;
-        }
-
-        header h1 {
-            font-size: 3rem;
-            margin: 0;
-            color: #333;
-        }
-
-        header p {
-            font-size: 1.2rem;
-            color: #666;
-            margin-top: 10px;
-            max-width: 700px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        /* Sezione Progetti/Immagini */
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .gallery div {
-            height: 300px;
-            background-color: lightgray;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            font-size: 1.5rem;
-            text-transform: uppercase;
-            font-weight: bold;
-        }
-
-        /* Colori diversi per simulare immagini */
-        .gallery div:nth-child(1) { background-color: #ff7f7f; }
-        .gallery div:nth-child(2) { background-color: #ffbf7f; }
-        .gallery div:nth-child(3) { background-color: #ffff7f; }
-        .gallery div:nth-child(4) { background-color: #7fff7f; }
-        .gallery div:nth-child(5) { background-color: #7f7fff; }
-        .gallery div:nth-child(6) { background-color: #bf7fff; }
-
-        /* Footer */
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-        }
-
-        /* Responsività per dispositivi mobili */
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2.5rem;
-            }
-
-            header p {
-                font-size: 1rem;
-            }
-
-            .gallery div {
-                height: 200px;
-            }
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Header con il titolo principale -->
-    <header>
-        <h1>Lorem Ipsum Portfolio</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vehicula ligula eget felis sollicitudin, ut condimentum nunc luctus.</p>
-    </header>
-
-    <!-- Sezione immagini (placeholder con quadrati colorati) -->
-    <section class="gallery">
-        <div>Image 1</div>
-        <div>Image 2</div>
-        <div>Image 3</div>
-        <div>Image 4</div>
-        <div>Image 5</div>
-        <div>Image 6</div>
-    </section>
-
-    <!-- Footer con i crediti -->
-    <footer>
-        <p>Copyright © 2024 Lorem Ipsum</p>
-    </footer>
-
-</body>
-</html>
