--- a/index.html
+++ b/index.html
@@ -1,51 +1,62 @@
 <!DOCTYPE html>
 <html lang="it">
-    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio Minimalista</title>
+    <title>Portfolio Simile a Suyoungy</title>
 </head>
-<body style="font-family: Arial, sans-serif; background-color: #f4f4f4; color: #333; line-height: 1.6; margin: 0; padding: 0;">
+<body style="font-family: Arial, sans-serif; background-color: #fff; color: #333; margin: 0; padding: 0;">
 
     <!-- Header -->
-    <header style="text-align: center; padding: 40px 0; border-bottom: 1px solid #ccc; background-color: #fff;">
-        <h1 style="font-size: 2.5rem; margin-bottom: 10px;">Il Mio Portfolio</h1>
-        <p style="font-size: 1rem; color: #666;">Graphic Designer | Web Developer</p>
+    <header style="text-align: center; padding: 80px 0; border-bottom: 1px solid #ccc;">
+        <h1 style="font-size: 4rem; font-weight: normal; margin-bottom: 20px;">Il Mio Portfolio</h1>
+        <p style="font-size: 1.2rem; color: #666;">Graphic Designer | Web Developer | Creativo</p>
     </header>
 
     <!-- Container -->
-    <div style="max-width: 900px; margin: 0 auto; padding: 20px;">
-        
-        <!-- Sezione Portfolio -->
-        <section class="portfolio" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 20px; margin-top: 40px;">
+    <div style="max-width: 1200px; margin: 0 auto; padding: 40px 20px;">
+        <!-- Introduzione -->
+        <section style="text-align: center; margin-bottom: 60px;">
+            <h2 style="font-size: 2.5rem; margin-bottom: 20px;">Chi Sono</h2>
+            <p style="font-size: 1.1rem; color: #666;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae gravida ipsum. Nulla facilisi. Donec vulputate urna eu nisi volutpat, non tempor nulla hendrerit.</p>
+        </section>
+
+        <!-- Sezione Portfolio (griglia come suyoungy.com) -->
+        <section class="portfolio" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 40px;">
             <!-- Progetto 1 -->
-            <div class="portfolio-item" style="background-color: #fff; padding: 20px; border: 1px solid #ddd; text-align: center;">
-                <div style="width: 100%; height: 200px; background-color: #7f8c8d;"></div>
-                <h2 style="font-size: 1.5rem; margin: 10px 0;">Progetto 1</h2>
-                <p style="color: #666;">Descrizione del progetto. Lorem ipsum dolor sit amet.</p>
+            <div class="portfolio-item" style="text-align: center;">
+                <div style="width: 100%; padding-bottom: 75%; background-color: #7f8c8d; position: relative;"></div>
+                <h3 style="font-size: 1.8rem; margin: 20px 0;">Progetto 1</h3>
+                <p style="font-size: 1rem; color: #666;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
 
             <!-- Progetto 2 -->
-            <div class="portfolio-item" style="background-color: #fff; padding: 20px; border: 1px solid #ddd; text-align: center;">
-                <div style="width: 100%; height: 200px; background-color: #3498db;"></div>
-                <h2 style="font-size: 1.5rem; margin: 10px 0;">Progetto 2</h2>
-                <p style="color: #666;">Descrizione del progetto. Lorem ipsum dolor sit amet.</p>
+            <div class="portfolio-item" style="text-align: center;">
+                <div style="width: 100%; padding-bottom: 75%; background-color: #3498db; position: relative;"></div>
+                <h3 style="font-size: 1.8rem; margin: 20px 0;">Progetto 2</h3>
+                <p style="font-size: 1rem; color: #666;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
 
             <!-- Progetto 3 -->
-            <div class="portfolio-item" style="background-color: #fff; padding: 20px; border: 1px solid #ddd; text-align: center;">
-                <div style="width: 100%; height: 200px; background-color: #e74c3c;"></div>
-                <h2 style="font-size: 1.5rem; margin: 10px 0;">Progetto 3</h2>
-                <p style="color: #666;">Descrizione del progetto. Lorem ipsum dolor sit amet.</p>
+            <div class="portfolio-item" style="text-align: center;">
+                <div style="width: 100%; padding-bottom: 75%; background-color: #e74c3c; position: relative;"></div>
+                <h3 style="font-size: 1.8rem; margin: 20px 0;">Progetto 3</h3>
+                <p style="font-size: 1rem; color: #666;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+
+            <!-- Progetto 4 -->
+            <div class="portfolio-item" style="text-align: center;">
+                <div style="width: 100%; padding-bottom: 75%; background-color: #2ecc71; position: relative;"></div>
+                <h3 style="font-size: 1.8rem; margin: 20px 0;">Progetto 4</h3>
+                <p style="font-size: 1rem; color: #666;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </section>
     </div>
 
     <!-- Footer -->
-    <footer style="text-align: center; padding: 20px; background-color: #fff; border-top: 1px solid #ccc; margin-top: 40px;">
-        <p style="color: #666;">&copy; 2024 Il Mio Nome. Tutti i diritti riservati.</p>
+    <footer style="text-align: center; padding: 40px 20px; background-color: #fff; border-top: 1px solid #ccc;">
+        <p style="font-size: 1rem; color: #666;">&copy; 2024 Il Mio Nome. Tutti i diritti riservati.</p>
     </footer>
 
 </body>
