--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
             margin: 20px 0;
         }
 
+        .image-text-container {
+            margin: 20px 0;
+        }
+
+        .image-text-container img {
+            width: 100%;
+            max-width: 800px;
+            height: auto;
+            display: block;
+            margin: 0 auto;
+        }
+
+        .image-text-container p {
+            font-size: 1rem;
+            color: #666;
+            margin-top: 10px;
+            max-width: 800px;
+            margin: 10px auto;
+        }
+
         /* Slider */
         .slider {
             display: flex;
@@ -72,6 +92,10 @@
     <section class="section">
         <h1>Prima Riga del Testo</h1>
         <div class="divider"></div>
+        <div class="image-text-container">
+            <img src="https://via.placeholder.com/800x400" alt="Immagine" />
+            <p>Breve descrizione o testo qui.</p>
+        </div>
         <div class="slider">
             <div class="slider-wrapper">
                 <img src="https://via.placeholder.com/800x400" alt="Immagine 1">
@@ -87,6 +111,10 @@
     <section class="section">
         <h1>Prima Riga del Testo</h1>
         <div class="divider"></div>
+        <div class="image-text-container">
+            <img src="https://via.placeholder.com/800x400" alt="Immagine" />
+            <p>Breve descrizione o testo qui.</p>
+        </div>
         <div class="slider">
             <div class="slider-wrapper">
                 <img src="https://via.placeholder.com/800x400" alt="Immagine 1">
@@ -102,6 +130,10 @@
     <section class="section">
         <h1>Prima Riga del Testo</h1>
         <div class="divider"></div>
+        <div class="image-text-container">
+            <img src="https://via.placeholder.com/800x400" alt="Immagine" />
+            <p>Breve descrizione o testo qui.</p>
+        </div>
         <div class="slider">
             <div class="slider-wrapper">
                 <img src="https://via.placeholder.com/800x400" alt="Immagine 1">
@@ -117,6 +149,10 @@
     <section class="section">
         <h1>Prima Riga del Testo</h1>
         <div class="divider"></div>
+        <div class="image-text-container">
+            <img src="https://via.placeholder.com/800x400" alt="Immagine" />
+            <p>Breve descrizione o testo qui.</p>
+        </div>
         <div class="slider">
             <div class="slider-wrapper">
                 <img src="https://via.placeholder.com/800x400" alt="Immagine 1">
