--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             height: 60px;
         }
 
+        /* Barra in alto */
+        .top-bar {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px 10px;
+            background-color: #f4f4f4;
+            border-bottom: 2px solid #ddd;
+        }
+
+        .top-bar div {
+            width: 30%;
+            text-align: center;
+        }
+
         /* Sezione principale */
         .section {
             padding: 20px 10px;
@@ -36,7 +50,7 @@
         }
 
         .divider {
-            border-top: 1px solid #ddd;
+            border-top: 2px solid #ddd;
             margin: 20px 0;
         }
 
@@ -46,8 +60,8 @@
 
         .image-text-container img {
             width: 100%;
-            max-width: 800px;
-            height: auto;
+            max-width: 1000px;
+            height: 600px;
             display: block;
             margin: 0 auto;
         }
@@ -56,7 +70,7 @@
             font-size: 1rem;
             color: #666;
             margin-top: 10px;
-            max-width: 800px;
+            max-width: 1000px;
             margin: 10px auto;
         }
 
@@ -70,16 +84,17 @@
             position: relative;
         }
 
-        .slider img {
-            width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
-
         .slider-wrapper {
             display: flex;
             transition: transform 0.5s ease-in-out;
+            width: 100%;
+        }
+
+        .slider img {
+            width: 100%;
+            height: 600px;
+            display: block;
+            margin: 0 auto;
         }
 
         /* Styling for the 'archive' section */
@@ -102,110 +117,36 @@
     <!-- Spazio extra sopra -->
     <div class="spazio-extra"></div>
 
+    <!-- Barra in alto -->
+    <div class="top-bar">
+        <div>Lorem ipsum dolor sit</div>
+        <div>Lorem ipsum dolor sit</div>
+        <div>Lorem ipsum dolor sit</div>
+    </div>
+
     <!-- Sezione 1 -->
     <section class="section">
         <h1>Prima Riga del Testo</h1>
         <div class="divider"></div>
         <div class="image-text-container">
-            <img src="https://via.placeholder.com/800x400" alt="Immagine" />
+            <img src="https://via.placeholder.com/1000x600" alt="Immagine" />
             <p>Breve descrizione o testo qui.</p>
         </div>
         <div class="slider">
             <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 1">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 2">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 3">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 4">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 1">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 2">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 3">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 4">
             </div>
         </div>
         <div class="divider"></div>
         <div class="slider">
             <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 5">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 6">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 7">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 8">
-            </div>
-        </div>
-    </section>
-
-    <!-- Sezione 2 -->
-    <section class="section">
-        <h1>Prima Riga del Testo</h1>
-        <div class="divider"></div>
-        <div class="image-text-container">
-            <img src="https://via.placeholder.com/800x400" alt="Immagine" />
-            <p>Breve descrizione o testo qui.</p>
-        </div>
-        <div class="slider">
-            <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 1">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 2">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 3">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 4">
-            </div>
-        </div>
-        <div class="divider"></div>
-        <div class="slider">
-            <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 5">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 6">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 7">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 8">
-            </div>
-        </div>
-    </section>
-
-    <!-- Sezione 3 -->
-    <section class="section">
-        <h1>Prima Riga del Testo</h1>
-        <div class="divider"></div>
-        <div class="image-text-container">
-            <img src="https://via.placeholder.com/800x400" alt="Immagine" />
-            <p>Breve descrizione o testo qui.</p>
-        </div>
-        <div class="slider">
-            <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 1">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 2">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 3">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 4">
-            </div>
-        </div>
-        <div class="divider"></div>
-        <div class="slider">
-            <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 5">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 6">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 7">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 8">
-            </div>
-        </div>
-    </section>
-
-    <!-- Sezione 4 -->
-    <section class="section">
-        <h1>Prima Riga del Testo</h1>
-        <div class="divider"></div>
-        <div class="image-text-container">
-            <img src="https://via.placeholder.com/800x400" alt="Immagine" />
-            <p>Breve descrizione o testo qui.</p>
-        </div>
-        <div class="slider">
-            <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 1">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 2">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 3">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 4">
-            </div>
-        </div>
-        <div class="divider"></div>
-        <div class="slider">
-            <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 5">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 6">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 7">
-                <img src="https://via.placeholder.com/800x400" alt="Immagine 8">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 5">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 6">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 7">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 8">
             </div>
         </div>
     </section>
