--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             display: flex;
             justify-content: space-between;
             padding: 20px 10px;
-            background-color: #f4f4f4;
-            border-bottom: 2px solid #ddd;
+            border-bottom: 2px solid #000; /* Linea nera */
         }
 
         .top-bar div {
@@ -50,7 +49,7 @@
         }
 
         .divider {
-            border-top: 2px solid #ddd;
+            border-top: 2px solid #000; /* Linea nera */
             margin: 20px 0;
         }
 
@@ -129,24 +128,28 @@
         <h1>Prima Riga del Testo</h1>
         <div class="divider"></div>
         <div class="image-text-container">
-            <img src="https://via.placeholder.com/1000x600" alt="Immagine" />
+            <img src="https://via.placeholder.com/1000x600" alt="Immagine 1" />
             <p>Breve descrizione o testo qui.</p>
         </div>
         <div class="slider">
             <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 1">
                 <img src="https://via.placeholder.com/1000x600" alt="Immagine 2">
                 <img src="https://via.placeholder.com/1000x600" alt="Immagine 3">
                 <img src="https://via.placeholder.com/1000x600" alt="Immagine 4">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 5">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 6">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 7">
             </div>
         </div>
         <div class="divider"></div>
         <div class="slider">
             <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 5">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 6">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 7">
                 <img src="https://via.placeholder.com/1000x600" alt="Immagine 8">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 9">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 10">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 11">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 12">
+                <img src="https://via.placeholder.com/1000x600" alt="Immagine 13">
             </div>
         </div>
     </section>
