--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family: Arial, sans-serif, monospace;
+            font-family: 'Courier New', monospace; /* Font monospace */
             color: #333;
             background-color: #fff;
             line-height: 1.6;
@@ -51,6 +51,18 @@
         .divider {
             border-top: 2px solid #000; /* Linea nera */
             margin: 20px 0;
+        }
+
+        .three-columns {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+
+        .three-columns div {
+            width: 30%;
+            padding: 10px;
+            box-sizing: border-box;
         }
 
         .image-text-container {
@@ -127,29 +139,76 @@
     <section class="section">
         <h1>Prima Riga del Testo</h1>
         <div class="divider"></div>
-        <div class="image-text-container">
-            <img src="https://via.placeholder.com/1000x600" alt="Immagine 1" />
-            <p>Breve descrizione o testo qui.</p>
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
         </div>
-        <div class="slider">
-            <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 2">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 3">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 4">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 5">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 6">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 7">
+        <div class="image-text-container">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 1">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 2">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 3">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 4">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 5">
+                </div>
             </div>
         </div>
         <div class="divider"></div>
-        <div class="slider">
-            <div class="slider-wrapper">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 8">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 9">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 10">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 11">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 12">
-                <img src="https://via.placeholder.com/1000x600" alt="Immagine 13">
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="image-text-container">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 6">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 7">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 8">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 9">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 10">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sezione 2 -->
+    <section class="section">
+        <h1>Prima Riga del Testo</h1>
+        <div class="divider"></div>
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="image-text-container">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 11">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 12">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 13">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 14">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 15">
+                </div>
+            </div>
+        </div>
+        <div class="divider"></div>
+        <div class="three-columns">
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+            <div>Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="image-text-container">
+            <div class="slider">
+                <div class="slider-wrapper">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 16">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 17">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 18">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 19">
+                    <img src="https://via.placeholder.com/1000x600" alt="Immagine 20">
+                </div>
             </div>
         </div>
     </section>
