--- a/index.html
+++ b/index.html
@@ -81,15 +81,14 @@
 
         .slider-wrapper {
             display: flex;
-            transition: transform 0.5s ease-in-out;
             white-space: nowrap;
+            margin-left: 0; /* Allinea al bordo sinistro */
         }
 
         .slider img {
-            width: auto;
             height: 600px;
             display: inline-block;
-            margin-right: 0;
+            margin: 0;
         }
 
         /* Styling for the 'archive' section */
